--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <body>
    <h1>Main page</h1>
    <h2>Kochubei</h2>
+   <p><a href="https://google.com.ua">Google.com.ua</a></p>
+   <p><a href="https://github.com">GitHub.com</a></p>
    <p>Some text</p>
    <p>Some text 2</p>
    <p>Some text 3</p>
